# pomodoro-app

./: .gitignore  ARCHITECTURE_DIAGRAM.md  CODE_OF_CONDUCT.md  COMPLETION_REPORT.md  History versions.md  IMPLEMENTATION_SUMMARY.md  PERMISSION_FLOW_COMPARISON.md  PERMISSION_FLOW_IMPLEMENTATION_GUIDE.md  PERMISSION_FLOW_REFACTORING_SUMMARY.md  PERMISSION_FLOW_TEST_PLAN.md  README.md  SWIFT_EXAMPLES.md  TERMS.md  countdown.py  music_player.py  pomodoro.py  ui_utils.py
.github/workflows/: pages.yml
Docs/: FAQ.md  Future_Pro_Plan.md  giveaway.md
Docs/Vibecoding notes/: ARCHITECTURE.md  PERMISSION_FLOW_UI_MOCKUPS.md  PR_SUMMARY.md  QUICK_REFERENCE.md  USAGE_GUIDE.md
Docs/legal-documents-and-policies/: privacy-policy.md  terms-of-service.md
backend/: app.py  pomodoro.py
frontend/: package-lock.json  package.json
frontend/src/: App.module.css  App.svelte
frontend/src-tauri/: Cargo.toml  tauri.conf.json
frontend/src-tauri/src/: main.rs  status_bar.rs  system_media.rs  timer.rs
frontend/src/lib/: CountdownTimer.svelte  MusicPlayer.svelte  countdownStore.ts  ipc.ts  systemMedia.ts  tauri.ts
history/ui-tkinter-0.4.x/: pomodoro.py
history_versions/: README.md
macos/PomodoroApp/: ActiveMediaSource.swift  AppState.swift  CountdownTimerState.swift  CountdownTimerView.swift  DebugStateView.swift  LocalAudioPlayer.swift  LocalMediaPlayer.swift  MainWindowView.swift  MediaControlBar.swift  MenuBarController.swift  PomodoroApp.swift  PomodoroMode.swift  SystemMediaController.swift  WindowBackgroundConfigurator.swift
website/: comparison.html  index.html  policies.html  privacy.html  robots.txt  script.js  sitemap.xml  style.css  terms.html
(+77 files in other folders)
