[package]
name = "pomodoro"
version = "0.1.0"
description = "Pomodoro Tauri frontend"
edition = "2021"

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.8.3", features = [ "shell-all",
  "system-tray",
  "notification"] }
window-vibrancy = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[features]
custom-protocol = ["tauri/custom-protocol"]
