[package]
name = "pomodoro"
version = "0.1.0"
description = "Pomodoro Tauri frontend"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
tauri = { version = "2.9.0", features = [] }
tauri-plugin-notification = "2.0.0"
window-vibrancy = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
once_cell = "1.19"
objc2 = "0.5"
objc2-foundation = "0.2"
objc2-app-kit = "0.2"

[features]
custom-protocol = ["tauri/custom-protocol"]
